# legal-tools

./: CLAUDE.md  README.md  daycal.html  deploy.sh  fee.html  index.html  interest.html  legalfee.html  number.html  start-backend.command  wrangler.jsonc
.github/workflows/: deploy-cf.yml  deploy-oss.yml
highway-drive-game/: index.html
highway-drive-game-vertical/: PROJECT_STATUS.md  README.md  index.html
highway-drive-game-vertical/css/: style.css
highway-drive-game-vertical/js/: game.js
highway-drive-game/css/: style.css
highway-drive-game/js/: game.js
investigation-tool/: .gitignore  README.md
investigation-tool/backend/: .env.example  .gitignore  main.py  requirements.txt
investigation-tool/backend/app/api/: config.py  investigation.py  system.py
investigation-tool/backend/app/core/: context.py  module_registry.py  pipeline.py
investigation-tool/backend/app/middleware/: auth.py
investigation-tool/backend/app/models/: schemas.py
investigation-tool/backend/app/modules/: asset_clue_module.py  base.py  basic_info_module.py  bidding_module.py  case_deep_dive_module.py  key_case_filter_module.py  litigation_module.py  related_companies_module.py  report_generation_module.py  restriction_module.py
investigation-tool/frontend/: config.html  index.html  investigation.html  logs.html  status.html
investigation-tool/src-tauri/: Cargo.toml  tauri.conf.json
investigation-tool/src-tauri/capabilities/: default.json
investigation-tool/src-tauri/icons/: icon.icns
investigation-tool/src-tauri/src/: lib.rs  main.rs
(+13 files in other folders)
